@@ -1,0 +1,6 @@
+TIP (HCons (MyVal 20) (HCons 1 (HCons True HNil)))
+TIP (HCons (MyVal 20) (HCons 2 (HCons True HNil)))
+TIP (HCons (MyVal 20) (HCons 1 (HCons False HNil)))
+TIP (HCons (MyVal 20) (HCons 21 (HCons True HNil)))
+TIP (HCons (MyVal 21) (HCons 1 (HCons True HNil)))
+TIP (HCons (MyVal 21) (HCons 1 (HCons True HNil)))
